# flux-tool

./: .gitignore  Dockerfile  LICENSE  README.md  config.toml  example_config.toml  example_nb.ipynb  flux-tool.def  packages  pyproject.toml
flux_tool/: __main__.py  beam_focusing_systematics.py  config.py  exporter.py  flux_systematic_analysis.py  flux_systematics_analysis.py  hadron_production_systematics.py  helpers.py  main.py  normalize_and_rebin_data.py  preprocessor.py  principal_component_analysis.py  uncertainty.py
flux_tool/vis_scripts/: __init__.py  beam_covariance.py  covariance.py  flux_prediction.py  fractional_uncertainties.py  helper.py  parent_spectra.py  pca_plots.py  plot_all.py  ppfx_universes.py  spectra_reader.py  style.py
flux_tool/visualizer/: __init__.py  covariance_matrix.py  fractional_uncertainties.py  gaussian_fitting.py  ppfx_correction.py  ppfx_universes.py  style.py  uncorrected_flux.py  vis_helpers.py  visualizer.py
src/flux_tool/: beam_focusing_systematics.py  config.py  exporter.py  flux_systematics_analysis.py  hadron_production_systematics.py  helpers.py  main.py  preprocessor.py  uncertainty.py
src/flux_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/flux_tool/vis_scripts/: flux_prediction.py  fractional_uncertainties.py  helper.py  parent_spectra.py  pca_plots.py  plot_all.py  ppfx_universes.py  spectra_reader.py
tests/: test_config.py  test_pca.py  test_uncertainty.py
