[tool.poetry]
name = "flux_tool"
version = "1.2.1"
description = "Package used to study the output histograms from PPFX"
authors = ["Anthony Wood <apwood@uh.edu>"]
readme = "README.md"
packages = [{include = "flux_tool"}]
license = "GPL-3.0-or-later"
repository = "https://github.com/apwood-physics/flux-tool"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.0"
pandas = "^2.0.3"
uproot = "^5.0.9"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
mplhep = "^0.3.28"
hist = "^2.6.3"
rich = "^13.5.2"
scipy = "^1.11.3"

[tool.poetry.scripts]
flux_tool = "flux_tool.main:main"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.2"
black = {extras = ["jupyter"], version = "^23.7.0"}
isort = "^5.12.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
ipywidgets = "^8.1.1"
pyright = "^1.1.327"
jupyterlab-lsp = "5.0.0rc0"
statsmodels = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
